# localdesktop

./: Cargo.toml
src/android/proot/: launch.rs  process.rs  setup.rs
src/core/: config.rs
