[package]
name = "localdesktop"
version = "1.5.3"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1

[target.'cfg(target_os = "android")'.dependencies] # Deps used for Local Desktop
tracing = "0.1.41"
jni = "0.21.1"
mockall = "0.13.1"
android_logger = { version = "0.14", default-features = false }
winit = { version = "0.30.11", features = [
    "android-native-activity",
    "wayland",
] }
wayland-protocols = "0.32.6"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
libloading = "0.8.6"
websocket = { version = "0.27.1", default-features = false, features = [
    "sync",
] }
sentry = { version = "0.41.0", default-features = false, features = [
    "reqwest",
    "rustls",
    "backtrace",
    "contexts",
    "panic",
    "debug-images",
    "logs",
    "log",
] }
pathdiff = "0.2"
smithay = { version = "0.5.0", default-features = false, features = [
    "wayland-protocols",
    "wayland-server",
    "renderer_glow",
    "wayland_frontend",
] }

[target.'cfg(not(target_os = "android"))'.dependencies] # Deps used only for setting up cross testing

[dependencies] # Deps used for both target
anyhow = "1.0.68"
android-sdkmanager-rs = "0.5.0"
byteorder = "1.4.3"
dunce = "1.0.3"
image = { version = "0.24.5", default-features = false, features = [
    "png",
    "webp",
] }
log = "0.4"
pem = "1.1.0"
quick-xml = { version = "0.26.0", features = ["serialize"] }
rasn = "0.6.1"
rasn-pkix = "0.6.0"
reqwest = { version = "0.12.20", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
roxmltree = "0.16.0"
rsa = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.16"
sha2 = { version = "0.10.6", features = ["oid"] }
tar = "0.4.43"
tempfile = "3.20.0"
toml = "0.8.12"
xz2 = { version = "0.1.7", features = ["static"] }
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }

[patch.crates-io]
smithay = { path = "patches/smithay" }
winit = { path = "patches/winit" }
